syntax = "proto3";
package v1;

message Recipe {
    int64 id = 1;
    string title = 2;
    string description = 3;
}

message ReadRequest{
    int64 id = 1;
}

message ReadResponse{
    Recipe recipe = 1;
}

message ReadAllRequest{
}

message ReadAllResponse{
    repeated Recipe recipes = 1;
}

// Service to manage list of recipes
service RecipeService {
    rpc Read(ReadRequest) returns (ReadResponse);

    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}